[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ocpp-lens"
version = "0.1.0"
description = "Parse and analyze OCPP 1.6 EV charger log files — sessions, faults, and reports."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Sahil Sandhu", email = "sahilsandhu@alumni.iitm.ac.in" },
]
keywords = [
    "ocpp", "ev", "electric-vehicle", "charger", "evse",
    "log-analysis", "iot", "telematics", "bms",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]

# Zero mandatory dependencies — pure stdlib
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
ocpp-lens = "ocpp_lens.cli:main"

[project.urls]
Homepage   = "https://github.com/sahilsandhu/ocpp-lens"
Repository = "https://github.com/sahilsandhu/ocpp-lens"
Issues     = "https://github.com/sahilsandhu/ocpp-lens/issues"

[tool.hatch.build.targets.wheel]
packages = ["ocpp_lens"]

[tool.hatch.build.targets.sdist]
include = [
    "/ocpp_lens",
    "/tests",
    "/examples",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]